--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@mdx-js/react": "v1",
     "@sindresorhus/slugify": "^1.1.0",
     "debounce": "^1.2.1",
     "dotenv": "^10.0.0",
@@ -29,6 +31,7 @@
     "gatsby-plugin-image": "^2.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
     "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-theme-ui": "^0.14.7",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-source-shopify": "^6.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
@@ -40,6 +43,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
     "shopify-buy": "^2.11.0",
+    "theme-ui": "^0.14.7",
     "urql": "^2.0.2"
   }
 }
