--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@mdx-js/react": "^2.3.0",
+    "@meronex/icons": "^4.0.0",
     "@theme-ui/mdx": "^0.15.5",
     "gatsby": "^5.7.0",
     "gatsby-plugin-image": "^3.7.0",
