--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "gatsby-plugin-theme-ui": "^0.15.5",
     "gatsby-source-contentful": "^8.7.0",
     "gatsby-source-shopify": "^8.7.0",
+    "isomorphic-fetch": "^3.0.0",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-particles": "^2.9.3",
+    "shopify-buy": "^2.19.0",
     "styled-components": "^5.3.9",
     "theme-ui": "^0.15.5",
     "tsparticles": "^2.9.3",
